# DA_2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile  README.md
include/: Algorithms.h  InputHandler.h  Menu.h  RequestProcessor.h  Utils.h
results/: output.txt
src/: Algorithms.cpp  ILPSolver.py  InputHandler.cpp  Menu.cpp  RequestProcessor.cpp  Utils.cpp
